# rust-ssp

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: mandelbrot_pixbypix.rs  mandelbrot_rustspp.rs
scripts/: imageproc_perfdata.csv  mandelbrot_perfdata.csv  perfplotter.py
src/: image_processing.rs  lib.rs  main.rs  minimal_example.rs  spp.rs
src/blocks/: blocks.rs  in_block.rs  inout_block.rs  mod.rs
src/work_storage/: blocking_ordered_set.rs  blocking_queue.rs  mod.rs  work_item.rs
