[package]
name = "rust-spp"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2021"

[dependencies]
rand = "0.6.5"
lazy_static = "1.3.0"
raster = "0.2.0"
clap = "2.33.0"
num_cpus = "1.0"
rayon = "1.6.0"
time = "0.1.42"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mandelbrot_rustspp"
harness = false
