[package]
name = "rust-spp"
version = "0.1.0"
authors = ["Ricardo Pieper <ricardopieper@live.com>"]
edition = "2021"

[dependencies]
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.3"
rayon = "1.6"
clap = "2.34"
raster = "0.2"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = "0.1"
rand = "0.6"
lazy_static = "1.4"
num_cpus = "1.15"
time = "0.3"
futures = "0.3"

[[bench]]
name = "mandelbrot_rustspp"
harness = false
